--- a/index.html
+++ b/index.html
@@ -117,13 +117,6 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience" class="icon">
                             <div>
-                                <h3>JavaScript</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience" class="icon">
-                            <div>
                                 <h3>React.js</h3>
                                 <p>Basic</p>
                             </div>
@@ -165,7 +158,7 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience" class="icon">
                             <div>
-                                <h3>React.js</h3>
+                                <h3>Hibernate</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
