--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="details-container">
                         <img src="./assets/education.png" alt="Education icon" class="icon" />
                         <h3>Education</h3>
-                        <p>BE. Bachelors of Engineering<br />Information of Science and Technology </p>
+                        <p>BE. Bachelors of Engineering<br />(Information of Science and Technology) </p>
                     </div>
                 </div>
                 <div class="text-container">
@@ -145,7 +145,7 @@
                             <img src="./assets/checkmark.png" alt="Experience" class="icon">
                             <div>
                                 <h3>Spring Boot</h3>
-                                <p>Intermediate</p>
+                                <p>Advanced</p>
                             </div>
                         </article>
                         <article>
@@ -159,7 +159,7 @@
                             <img src="./assets/checkmark.png" alt="Experience" class="icon">
                             <div>
                                 <h3>Hibernate</h3>
-                                <p>Basic</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
